[gd_scene load_steps=6 format=3 uid="uid://c7pdt0hqa203t"]

[ext_resource type="Script" uid="uid://bjxf5g5nhlvrf" path="res://scripts/win_screen.gd" id="1_2l6cc"]
[ext_resource type="Theme" uid="uid://dbhol82uf2kbs" path="res://scripts/button.tres" id="1_erk2x"]
[ext_resource type="Script" uid="uid://cug7vkhtvf3qk" path="res://scripts/game_manager.gd" id="2_0lrm4"]
[ext_resource type="FontFile" uid="uid://dgkb7afoeic48" path="res://assets/fonts/monogram-extended-italic.ttf" id="2_2l6cc"]
[ext_resource type="AudioStream" uid="uid://7wapg7ymoi5k" path="res://assets/sfx/tap.wav" id="4_e41g7"]

[node name="WinScreen" type="CenterContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2l6cc")

[node name="GameManager" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("2_0lrm4")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_erk2x")
theme_override_colors/font_color = Color(0.105882354, 0.078431375, 0.11764706, 1)
theme_override_fonts/font = ExtResource("2_2l6cc")
theme_override_font_sizes/font_size = 48

[node name="RestartButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(400, 70)
layout_mode = 2
theme = ExtResource("1_erk2x")
text = "Restart at Level 1"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_e41g7")
max_distance = 4096.0
attenuation = 1e-05

[connection signal="pressed" from="VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
